[package]
name = "system-programming"
version = "0.1.0"
edition = "2021"

[lib]
name = "system_programming"

[dependencies]
piston_window = "0.117"
piston2d-graphics = "0.39"
rand = "0.8"
bincode = "1"
serde = "1"
serde_cbor = "0.8"
serde_derive = "1"
serde_json = "1"
byteorder = "1.2"
crc = "1.7"
reqwest = "0.9"
clap = "2.33"
trust-dns = { version = "0.16", default-features = false }
url = "2"
smoltcp = { version = "0.6", features = ["proto-igmp", "proto-ipv4", "verbose", "log"] }
chrono = "0.4.38"
svg = "0.6"
sha256 = "1.5.0"
rayon = "1"
crossbeam = "0.7"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"
svg = "0.6"
